02-exposed-dashboard/kube-web-view/deploy-ingress/insecure-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exposed-dashboard
  name: kube-web-view-insecure
spec:
  ingressClassName: nginx
  rules:
  - host: null # "rus-vote.seck8s.slurm.io"  # Empty => default backend
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-web-view
            port:
              number: 80
